Fixed missing space below message when sticky messages are disabled

--- a/web/css/layout/_messages.less
+++ b/web/css/layout/_messages.less
@@ -26,10 +26,8 @@
         align-items: flex-start;
         gap: @1;
         padding: @3 @4;
+        margin-bottom: @3;
         border: 1px solid transparent;
-        + * {
-            margin-top: @3;
-        }
 
         .lib-css(font-family, @message__font-family);
         .lib-css(font-size, @message__font-size);
